# S7Lens

./: CLAUDE.md  Cargo.toml  PLAN.md  PROGRESS.md  README.md  build.rs
libs/snap7/: README.md
libs/snap7/win64/: snap7.def
scripts/: build-windows.sh  gen_def.py  package.sh
src/: app.rs  config.rs  main.rs  state.rs
src/export/: csharp.rs
src/model/: mod.rs  session.rs  variable.rs
src/plc/: client.rs  mock_data.rs  mod.rs  parser.rs  poller.rs
