[package]
name = "siemens-plc-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["default"] }
egui_extras = { version = "0.29", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
